metube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metube
  namespace: app-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metube
  template:
    metadata:
      labels:
        app: metube
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: metube
          image: ghcr.io/alexta69/metube:2026.09.28
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 2048Mi
          livenessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: metube-downloads
